--- a/package.json
+++ b/package.json
@@ -4,14 +4,32 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node index.js"
+		"start": "npm run build && node ./dist/server.js",
+		"clean": "rm -rf dist",
+		"build": "npm run clean && babel ./src --out-dir dist --copy-files",
+		"prod": "node ./dist/server.js"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@babel/cli": "^7.17.3",
+		"@babel/core": "^7.17.5",
+		"body-parser": "^1.19.2",
+		"chalk": "^5.0.0",
+		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
+		"ethers": "^5.5.4",
+		"express": "^4.17.3",
+		"loglevel": "^1.8.0",
+		"moment": "^2.29.1",
 		"mongoose": "^6.2.2",
 		"snoowrap": "^1.23.0"
+	},
+	"devDependencies": {
+		"@babel/node": "^7.16.8",
+		"@babel/plugin-transform-runtime": "^7.17.0",
+		"@babel/polyfill": "^7.12.1",
+		"@babel/preset-env": "^7.16.11",
+		"@babel/runtime": "^7.17.2"
 	}
 }
