--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
 		"@chakra-ui/react": "^1.6.10",
 		"@emotion/react": "^11.5.0",
 		"@emotion/styled": "^11.3.0",
+		"@gnosis.pm/safe-core-sdk": "^2.0.0",
+		"@gnosis.pm/safe-core-sdk-types": "^1.0.0",
+		"@gnosis.pm/safe-ethers-lib": "^1.0.0",
+		"@gnosis.pm/safe-react-gateway-sdk": "^2.8.5",
+		"@gnosis.pm/safe-service-client": "^1.1.1",
 		"@reduxjs/toolkit": "^1.6.2",
-		"@testing-library/jest-dom": "^5.16.2",
-		"@testing-library/react": "^12.1.3",
-		"@testing-library/user-event": "^13.5.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-scripts": "5.0.0",
-		"web-vitals": "^2.1.4",
+		"@testing-library/jest-dom": "^5.14.1",
+		"@testing-library/react": "^11.2.7",
+		"@testing-library/user-event": "^12.8.3",
 		"@usedapp/core": "git://github.com:Janmajayamall/useDApp.git",
 		"@web3-react/core": "^6.1.9",
 		"@web3-react/injected-connector": "^6.0.7",
@@ -23,9 +24,18 @@
 		"ethers": "^5.5.1",
 		"framer-motion": "^4.0.0",
 		"graphql": "^16.0.1",
+		"html-react-parser": "^1.4.8",
 		"immer": "^9.0.6",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-error-overlay": "^6.0.9",
+		"react-hook-form": "^7.19.3",
 		"react-redux": "^7.2.6",
-		"urql": "^2.0.5"
+		"react-router": "^6.0.2",
+		"react-router-dom": "^6.0.2",
+		"react-scripts": "4.0.3",
+		"urql": "^2.0.5",
+		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
