--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start-dev": "PORT=5000 REACT_APP_VERCEL_ENV=development react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
