--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
-		"@usedapp/core": "git://github.com:Janmajayamall/useDApp.git",
+		"@usedapp/core": "^1.0.7",
 		"@web3-react/core": "^6.1.9",
 		"@web3-react/injected-connector": "^6.0.7",
 		"@web3-react/network-connector": "^6.1.9",
 		"axios": "^0.24.0",
-		"ethers": "^5.5.1",
+		"ethers": "^5.6.8",
 		"framer-motion": "^4.0.0",
 		"graphql": "^16.0.1",
 		"html-react-parser": "^1.4.12",
