configured token symbols

--- a/src/contracts/config-staging.json
+++ b/src/contracts/config-staging.json
@@ -2,10 +2,10 @@
 	"GroupSingleton": "0x08c7eb16acdc59d14a1eb11ed8aa30992a66a44f",
 	"GroupRouter": "0x492fda2ecf1a53117db525049d7078f988f13b1e",
 	"GroupProxyFactory": "0x5ea3dfeef2e8450dcb131d318822f365821c1aa2",
-	"Group": "0x94a1ecd1ed6695855c7b23d0405bca96ee373040",
-	"Token": "0xfd977c03ccc88353b365ecb1c9c06df547d4eefa",
-	"TokenSymbol": "FakeWETH",
-	"chainId": 412119,
+	"Group": "0xbdb742ae35247c2f5d63bfa0df97b96a133c1314",
+	"Token": "0xeae79885EEeb85d6cbc8D6aF6C65ec40b2b0e38a",
+	"TokenSymbol": "MoonTest",
+	"chainId": 5391184,
 	"chainRPC": "https://testnet.redditspace.com/rpc",
 	"chainName": "Reddit Testnet",
 	"blocExplorerUri": "https://testnet.redditspace.com/",
