--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "yarn": "^1.17.3"
   },
   "scripts": {
+    "nx": "nx",
     "preinstall": "npx only-allow pnpm",
     "lint": "wsrun -c -s lint",
     "lint:fix": "wsrun -c -s lint:fix",
@@ -24,6 +25,9 @@
     "ethers": "5.6.2"
   },
   "devDependencies": {
-    "eslint-plugin-no-only-tests": "^2.6.0"
+    "@nrwl/workspace": "^14.3.4",
+    "eslint-plugin-no-only-tests": "^2.6.0",
+    "nx": "^14.3.4",
+    "typescript": "^4.7.3"
   }
 }
