--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -5,6 +5,8 @@
 	"dependencies": {
 		"@chakra-ui/icons": "^1.1.1",
 		"@chakra-ui/react": "^1.6.10",
+		"@chakra-ui/tabs": "^2.0.3",
+		"@chakra-ui/theme-tools": "^2.0.2",
 		"@emotion/react": "^11.5.0",
 		"@emotion/styled": "^11.3.0",
 		"@gnosis.pm/safe-core-sdk": "^2.0.0",
@@ -16,7 +18,7 @@
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
-		"@usedapp/core": "^1.0.7",
+		"@usedapp/core": "^1.0.10",
 		"@web3-react/core": "^6.1.9",
 		"@web3-react/injected-connector": "^6.0.7",
 		"@web3-react/network-connector": "^6.1.9",
@@ -31,6 +33,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-error-overlay": "^6.0.9",
+		"react-flat-providers": "^2.1.0",
 		"react-hook-form": "^7.19.3",
 		"react-redux": "^7.2.6",
 		"react-router": "^6.0.2",
