fix: - Fixing frontend useEffect async issue with an async invocked function wrapped in an arrow function. - Fixing closing of metamask model after having a successful connection

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "scripts": {
     "nx": "nx",
-    "start-frontend-dev": "cd packages/frontend && pnpm start-dev",
-    "start-frontend-prod": "cd packages/frontend && pnpm start-prod",
-    "start-backend-dev": "cd packages/backend && pnpm start",
+    "start:frontend:dev": "cd packages/frontend && pnpm start-dev",
+    "start:frontend:prod": "cd packages/frontend && pnpm start-prod",
+    "start:backend:dev": "cd packages/backend && pnpm start",
     "preinstall": "npx only-allow pnpm",
     "lint": "wsrun -c -s lint",
     "lint:fix": "wsrun -c -s lint:fix",
@@ -18,8 +18,8 @@
     "version": "pnpm changeset version && pnpm install",
     "release": "pnpm build && pnpm changeset publish",
     "clean": "rm -rf packages/frontend/node_modules packages/backend/node_modules",
-    "clean-frontend": "rm -rf packages/frontend/node_modules",
-    "clean-backend": "rm -rf packages/backend/node_modules"
+    "clean:frontend": "rm -rf packages/frontend/node_modules",
+    "clean:backend": "rm -rf packages/backend/node_modules"
   },
   "dependencies": {
     "@changesets/cli": "^2.14.1",
