--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,14 @@
   // },
   "ignorePatterns": [".eslintrc.js"],
   "rules": {
+    "no-console": "warn",
+    "no-restricted-syntax": [
+      "error",
+      {
+        "selector": "CallExpression[callee.object.name='console'][callee.property.name!=/^(log|warn|error|info|trace)$/]",
+        "message": "Unexpected property on console object was called"
+      }
+    ],
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
     //"@typescript-eslint/no-floating-promises": "error",
