--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,12 +24,12 @@ services:
       - GROUP=0x94a1ecd1ed6695855c7b23d0405bca96ee373040
       - FRONTEND_URI=http://127.0.0.1:8000/post
     ports:
-      - "8080:3000"
+      - "3000:3000"
     networks:
       - coco
 
   frontend:
-    image: coco-frontend
+    image: coco-frontend:0.1
     build:
       dockerfile: Dockerfile
       context: ./packages/frontend
@@ -40,7 +40,7 @@ services:
     environment:
       - REACT_APP_VERCEL_ENV=development
     ports:
-      - '80:8000'
+      - '8080:8000'
     networks:
       - coco
 
