--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -5,8 +5,6 @@
 	"dependencies": {
 		"@chakra-ui/icons": "^1.1.1",
 		"@chakra-ui/react": "^1.6.10",
-		"@chakra-ui/tabs": "^2.0.3",
-		"@chakra-ui/theme-tools": "^2.0.2",
 		"@emotion/react": "^11.5.0",
 		"@emotion/styled": "^11.3.0",
 		"@gnosis.pm/safe-core-sdk": "^2.0.0",
@@ -18,11 +16,12 @@
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
-		"@usedapp/core": "^1.0.10",
+		"@usedapp/core": "^1.0.7",
 		"@web3-react/core": "^6.1.9",
 		"@web3-react/injected-connector": "^6.0.7",
 		"@web3-react/network-connector": "^6.1.9",
 		"axios": "^0.24.0",
+		"eslint-plugin-no-only-tests": "^3.0.0",
 		"ethers": "^5.6.8",
 		"framer-motion": "^4.0.0",
 		"graphql": "^16.0.1",
@@ -30,16 +29,15 @@
 		"i": "^0.3.7",
 		"immer": "^9.0.6",
 		"npm": "^8.10.0",
-		"prettier": "2.1.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-error-overlay": "^6.0.9",
-		"react-flat-providers": "^2.1.0",
 		"react-hook-form": "^7.19.3",
 		"react-redux": "^7.2.6",
 		"react-router": "^6.0.2",
 		"react-router-dom": "^6.0.2",
 		"react-scripts": "4.0.3",
+		"typescript": "^4.7.4",
 		"urql": "^2.0.5",
 		"web-vitals": "^1.1.2"
 	},
@@ -48,11 +46,7 @@
 		"start-prod": "PORT=8000 REACT_APP_VERCEL_ENV=production react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"lint": "yarn lint:prettier --check && yarn lint:eslint",
-		"lint:fix": "yarn lint:prettier --write && yarn lint:eslint --fix",
-		"lint:eslint": "eslint './{src,test}/**/*.{js,jsx}'",
-		"lint:prettier": "yarn prettier './{src,test}/**/*.{js,jsx}'"
+		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
 		"extends": [
