--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -21,6 +21,7 @@
 		"dotenv": "^16.0.0",
 		"ethers": "^5.5.4",
 		"express": "^4.17.3",
+		"https": "^1.0.0",
 		"loglevel": "^1.8.0",
 		"moment": "^2.29.1",
 		"mongoose": "^6.2.2",
