--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -42,8 +42,9 @@
 		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
-		"start-dev": "PORT=8000 REACT_APP_VERCEL_ENV=DEVELOPMENT react-scripts start",
-		"start-prod": "PORT=8000 REACT_APP_VERCEL_ENV=production react-scripts start",
+		"start-dev": "PORT=8050 REACT_APP_VERCEL_ENV=DEVELOPMENT react-scripts start",
+		"start-staging": "PORT=8050 REACT_APP_VERCEL_ENV=STAGING react-scripts start",
+		"start-prod": "PORT=8050 REACT_APP_VERCEL_ENV=production react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
